Added notes about supported garbage collectors